--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
-.App {
-  text-align: center;
-}
-
+/* stylelint-disable keyframes-name-pattern */
+/* stylelint-disable selector-class-pattern */
 .App-logo {
-  height: 40vmin;
+  height: 40vh;
   pointer-events: none;
 }
 
@@ -20,7 +18,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 2vw);
   color: white;
 }
 
