--- a/src/assets/scss/utilities/_placeholders.scss
+++ b/src/assets/scss/utilities/_placeholders.scss
@@ -1,3 +1,7 @@
+%container {
+  margin-inline: var(--size-10);
+}
+
 %full-height {
   height: 100%;
 }
@@ -12,6 +16,13 @@
   align-items: center;
 }
 
+%flex-between {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
 %grid-center {
   display: grid;
   place-content: center;
@@ -24,4 +35,65 @@
 %rl-vertical-from-bottom {
   writing-mode: vertical-rl;
   rotate: 180deg;
+}
+
+%lr-vertical-from-bottom {
+  writing-mode: vertical-lr;
+  rotate: 180deg;
+}
+
+%gray-linear-gradient {
+  background-image: linear-gradient(
+      112.5deg,
+      rgb(64, 64, 64) 0%,
+      rgb(64, 64, 64) 63%,
+      rgb(78, 78, 78) 63%,
+      rgb(78, 78, 78) 78%,
+      rgb(92, 92, 92) 78%,
+      rgb(92, 92, 92) 80%,
+      rgb(106, 106, 106) 80%,
+      rgb(106, 106, 106) 83%,
+      rgb(119, 119, 119) 83%,
+      rgb(119, 119, 119) 86%,
+      rgb(133, 133, 133) 86%,
+      rgb(133, 133, 133) 96%,
+      rgb(147, 147, 147) 96%,
+      rgb(147, 147, 147) 100%
+    ),
+    linear-gradient(
+      210deg,
+      rgb(64, 64, 64) 0%,
+      rgb(64, 64, 64) 63%,
+      rgb(78, 78, 78) 63%,
+      rgb(78, 78, 78) 78%,
+      rgb(92, 92, 92) 78%,
+      rgb(92, 92, 92) 80%,
+      rgb(106, 106, 106) 80%,
+      rgb(106, 106, 106) 83%,
+      rgb(119, 119, 119) 83%,
+      rgb(119, 119, 119) 86%,
+      rgb(133, 133, 133) 86%,
+      rgb(133, 133, 133) 96%,
+      rgb(147, 147, 147) 96%,
+      rgb(147, 147, 147) 100%
+    ),
+    linear-gradient(
+      157.5deg,
+      rgb(64, 64, 64) 0%,
+      rgb(64, 64, 64) 63%,
+      rgb(78, 78, 78) 63%,
+      rgb(78, 78, 78) 78%,
+      rgb(92, 92, 92) 78%,
+      rgb(92, 92, 92) 80%,
+      rgb(106, 106, 106) 80%,
+      rgb(106, 106, 106) 83%,
+      rgb(119, 119, 119) 83%,
+      rgb(119, 119, 119) 86%,
+      rgb(133, 133, 133) 86%,
+      rgb(133, 133, 133) 96%,
+      rgb(147, 147, 147) 96%,
+      rgb(147, 147, 147) 100%
+    ),
+    linear-gradient(210deg, rgb(202, 202, 202), rgb(187, 187, 187));
+  background-blend-mode: overlay, overlay, overlay, normal;
 }
