--- a/src/assets/scss/utilities/_variables.scss
+++ b/src/assets/scss/utilities/_variables.scss
@@ -24,6 +24,7 @@ $zindex-offcanvas: 1050;
 $zindex-modal: 1060;
 $zindex-popover: 1070;
 $zindex-tooltip: 1080;
+$zindex-cursor: 10000;
 
 // animation delay values
 $first-delay: 0s;
