--- a/src/assets/scss/layout/_navigation.scss
+++ b/src/assets/scss/layout/_navigation.scss
@@ -56,7 +56,12 @@ $image-controller-height: 250px;
   }
 
   &__item {
-    @include mix.scale(2s, ease-in-out, var.$second-delay, forwards);
+    @include mix.focus-in(
+      2s,
+      cubic-bezier(0.25, 0.46, 0.45, 0.94),
+      var.$second-delay,
+      both
+    );
     @include mix.media-query-max(var.$sm) {
       font-size: var(--size-12) !important;
     }
