--- a/src/assets/scss/layout/_navigation.scss
+++ b/src/assets/scss/layout/_navigation.scss
@@ -162,13 +162,14 @@ $image-controller-height: 250px;
   }
 }
 // slider arrow key styles
-.arrow-key {
-  &__left,
-  &__right {
-    border: initial;
-    padding: var(--size-3);
-    border-radius: 50%;
-    margin-inline-start: var(--size-2);
-    // cursor: pointer;
+.arrow-keys {
+  border: initial;
+  padding: var(--size-3);
+  border-radius: 50%;
+  margin-inline-start: var(--size-2);
+  // cursor: pointer;
+
+  &:last-child {
+    rotate: 180deg;
   }
 }
