--- a/src/assets/scss/utilities/_variables.scss
+++ b/src/assets/scss/utilities/_variables.scss
@@ -15,6 +15,7 @@ $base-size: 1rem;
 $base-increase: 0.25;
 
 // zindex value
+$zindex-image-header: 1;
 $zindex-top-header-layer: 1000;
 $zindex-dropdown: 1010;
 $zindex-sticky: 1020;
